# 826_Code

./: .gitignore  README.md  pyproject.toml
Assignment1/: Progression.md  Task.md  assignment1.executed.ipynb  assignment1.ipynb
docs/: mimic_iv_schema.md
tests/: conftest.py  test_data.py  test_evaluation.py  test_training.py
utils/: __init__.py  data.py  evaluation.py  training.py
